aws-load-balancer-controller/examples/grpc/grpcserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/backend-protocol-version: GRPC
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:123456789012:certificate/139617d8-4090-4042-b2e3-bd0494c090b9
    alb.ingress.kubernetes.io/subnets: subnet-xxxxxx, subnet-xxxxxx
  labels:
    app: grpcserver
    environment: dev
  name: grpcserver
  namespace: grpcserver
spec:
  ingressClassName: alb
  rules:
  - host: grpc-stage.ai-connect.jp
    http:
      paths:
      - backend:
          service:
            name: grpcserver
            port:
              number: 50051
        path: /helloworld.Greeter
        pathType: Prefix
